--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,30 @@
 spring:
   application:
     name: spring-batch-lecture
+  profiles:
+    active: mysql
+---
+spring:
+  config:
+    activate:
+      on-profile: h2
+  datasource:
+    hikari:
+      jdbc-url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+      username: sa
+      password:
+      driver-class-name: org.h2.Driver
+---
+spring:
+  batch:
+    jdbc:
+      initialize-schema: always # schema auto create
+  config:
+    activate:
+      on-profile: mysql
+  datasource:
+    hikari:
+      jdbc-url: jdbc:mysql://localhost:3306/springbatch?useUnicode=true&characterEncoding=utf8
+      username: root
+      password: 1qaz@WSX
+      driver-class-name: com.mysql.cj.jdbc.Driver
