도메인 이해 - JobInstance

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: spring-batch-lecture
+  batch:
+    job:
+      enabled: false
   profiles:
     active: mysql
 ---
