--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring:
     name: spring-batch-lecture
   profiles:
     active: mysql
+  batch:
+    job:
+      names: ${job.name:NONE}
+    jdbc:
+      initialize-schema: always # schema auto create
 ---
 spring:
   config:
@@ -16,9 +21,6 @@ spring:
       driver-class-name: org.h2.Driver
 ---
 spring:
-  batch:
-    jdbc:
-      initialize-schema: always # schema auto create
   config:
     activate:
       on-profile: mysql
